--- a/Web.html
+++ b/Web.html
@@ -3,25 +3,34 @@
     <head>
         <title>Our Website</title>
         <link rel="stylesheet" href="./Web.css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
     </head>
 
     <body>
-        <nav>
-            <ul>
-                <li class="Home">Home</li>
-                <li class="DaftarAnime">Daftar Anime</li>
-                <li class="JadwalRilis">Jadwal Rilis</li>
-                <li class="Event">Event</li>
-                <li class="About Us">About Us</li>
-            </ul>
-        </nav>
+        <header>
+            <div class="header-inner">
+                <h1>CCNime</h1>
+                <h3>Tempat Download Anime</h3>
+                <nav>
+                    <ul>
+                        <li class="active">Home</li>
+                        <li>Daftar Anime</li>
+                        <li>Jadwal Rilis</li>
+                        <li>About Us</li>
+                    </ul>
+                </nav>
+            </div>   
+        </header>
+        
+        <main>
+            <section>
+                <h1>Welcome to CCNime</h1>
+                <p>CCNime merupakan website untuk streaming dan download berbagai genre anime seperti action, adventure, romance ataupun hentai kesukaannya dharma dan hanung</p>
+                <br>
+            </section>
+        </main>
 
-        <div>
-            <h1>Welcome to our website</h1>
-            <br>
-            <p>Oke guys jd ini web pertama kita buat yang bertemakan anime.</p>
-            <br>
-            <p>Halo guys</p>
-        </div>
+        <footer></footer>
     </body>
 </html>
